# agent-design-contracts

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB-DISTRIBUTION.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  adc-theory.qmd  build-package-improved.sh  install-adc.sh  pyproject.toml
.claude/commands/: adc.md
.github/workflows/: build-package.yml  check.yml  release.yml
contracts/: README.md  adc-cli-best-practices-adc-002.qmd  adc-cli-testing-adc-003.md  adc-mcp-server-adc-004.md  adc-sequential-workflow-001.qmd  adc-tool-adc-001.md  adc-tool-adc-001.qmd  simple-math-dart.qmd
contracts/refactoring/: REFACTOR-042-COMPLETION-REPORT.md  refactor-evaluator-empirical-testing-adc-042.qmd
contracts/universal-library-loader/: 001-overview.qmd  002-phase2-bindings.qmd  003-rpc-bridge.qmd  ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md
docs/: CONTRACT_LINTING.md  README-adc-cli.md  README-overview.md  REFACTORER_ROLE.md  SETUP_GUIDE.md  relationship-dynamics.md
examples/: test_lint.py
macro/: comprehensive-audit.md  contract-lint.md  render-contract-tree.md  summarize-tech.md
roles/: auditor.md  initializer.md  pr_orchestrator.md  simulator.md  system_evaluator.md
src/adc/: __init__.py  __main__.py
src/adc_cli/: __init__.py  __main__.py  commands.py  config.py  contract_lint.py  logging_config.py  output_formatter.py  providers.py  setup.py
tests/: README.md  __init__.py  test_adc_tool.py  test_config.py  test_evaluator_ull_integration.py  test_mcp_server.py  test_providers.py  test_sequential_workflow_evaluator.py
(+82 files in other folders)
